Fix word spacing

--- a/index.css
+++ b/index.css
@@ -234,7 +234,7 @@ span.links {
 	font-size: 12px;
 	font-weight: 500;	
 	float: left;
-	margin-left: 15%;
+	margin-left: 50px;
 	word-spacing: 1px;
 }
 
@@ -320,7 +320,7 @@ span.links {
 }
 
 div.description {
-	font-size: 11px;
+    font-size: 11px;
 }
 
 hr { 
@@ -328,7 +328,7 @@ hr {
 }
 
 hr::after {
-	content: '';
+    content: '';
     position: absolute;
     border: none; 
     background-color: #FFFFFF;  
